feat: :sparkles: index page
basic index page structure created

none

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="rain"></div>
+    <header>
+        <span class="header_title">JOHN WICK</span>
+        <nav>
+            <span>Biografía</span>
+            <span>Peliculas</span>
+            <span>Armería</span>
+            <span>Personajes</span>
+        </nav>
+    </header>
+    <main>
+        <span id="main_phrase">People keep asking if I'm back... Yeah, I'm thinking I'm back</span>
+        <button id="main_bottom">Conoce la historia</button>
+    </main>
 </body>
 </html>
