feat: :construction: Character cards section
Working on characters images

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -6,6 +6,71 @@
     <title>Characters Page</title>
 </head>
 <body>
-    
+    <header>
+        <span class="header_title">JOHN WICK</span>
+        <nav>
+            <span>Biografía</span>
+            <span>Peliculas</span>
+            <span>Armería</span>
+            <span>Personajes</span>
+        </nav>
+    </header>
+    <nav>
+        <input type="text" class="input_SearchCharacter" placeholder="Buscar personaje">
+        <img src="../icons/Filtro.png" alt="filtro">
+    </nav>
+    <section id="characters_section">
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+        
+        <div class="character_card">
+            <img src="" alt="">
+        </div>
+    </section>
 </body>
 </html>
