feat: :bricks: characters page structure
Strucutre created

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -21,55 +21,79 @@
     </nav>
     <section id="characters_section">
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Akira.png" alt="Akira">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Bowery.png" alt="Bowery King">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Caine.png" alt="Caine">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Cassian.png" alt="Cassian">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Charon.png" alt="Charon">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Ilustre.png" alt="Ilustre">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/josef_tarasov.png" alt="josef_tarasov">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Koji.png" alt="Koji">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Magistrada.png" alt="Magistrada">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Marcus.png" alt="Marcus">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Marques.png" alt="Marques">
         </div>
 
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Nobody.png" alt="Nobody">
         </div>
-        
+
         <div class="character_card">
-            <img src="" alt="">
+            <img src="../photos/Perkins.png" alt="Perkins">
+        </div>
+
+        <div class="character_card">
+            <img src="../photos/Ruska.png" alt="Ruska">
+        </div>
+
+        <div class="character_card">
+            <img src="../photos/Santino D Antonio.png" alt="Santino D'Antonio">
+        </div>
+
+        <div class="character_card">
+            <img src="../photos/Sofia.png" alt="Sofia">
+        </div>
+
+        <div class="character_card">
+            <img src="../photos/Viggo.png" alt="Viggo Tarasov">
+        </div>
+
+        <div class="character_card">
+            <img src="../photos/Winston.png" alt="Winston">
+        </div>
+
+        <div class="character_card">
+            <img src="../photos/Zero.png" alt="Zero"> 
         </div>
     </section>
 </body>
