feat: :construction: Movies section
Movie section in construction

none

--- a/html/movies_page.html
+++ b/html/movies_page.html
@@ -6,6 +6,30 @@
     <title>Movies</title>
 </head>
 <body>
-    
+    <header>
+        <span class="header_title">JOHN WICK</span>
+        <nav>
+            <span>Biografía</span>
+            <span>Peliculas</span>
+            <span>Armería</span>
+            <span>Personajes</span>
+        </nav>
+    </header>
+    <main id="main_movies">
+        <hr>
+        <section class="poster_section">
+            <img src="../posters/Poster_JW1.png" alt="Poster_JW1" class="poster_JW1">
+        </section>
+        <section class="poster_section">
+            <img src="../posters/Poster_JW2.png" alt="Poster_JW2" class="poster_JW2">
+        </section>
+        <section class="poster_section">
+            <img src="../posters/Poster_JW3.png" alt="Poster_JW3" class="poster_JW3">
+        </section>
+        <section class="poster_section">
+            <img src="../posters/Poster_JW4.png" alt="Poster_JW4" class="poster_JW4">
+        </section>
+        <hr>
+    </main>
 </body>
 </html>
