fix: :bug: Bug fixed
Bug related to nav repeated fixed

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -15,10 +15,10 @@
             <span>Personajes</span>
         </nav>
     </header>
-    <nav>
+    <section class="hero_section">
         <input type="text" class="input_SearchCharacter" placeholder="Buscar personaje">
         <img src="../icons/Filtro.png" alt="filtro">
-    </nav>
+    </section>
     <section id="characters_section">
         <div class="character_card">
             <img src="../photos/Akira.png" alt="Akira">
