feat: :fire: Removing code
code lines improvements

none

--- a/html/history_page.html
+++ b/html/history_page.html
@@ -18,8 +18,9 @@
     <main>
         <section>
             <img src="../photos/John Wixk.jpg" alt="John Wick" class="main_image">
-            <div>
-                <span>John Wick</span>
+            <div id="Info_JohnWick">
+                <span id="Span_Historyname">John Wick</span>
+
             </div>
         </section>
     </main>
