feat: :bricks: character info page
structure created and built

none

--- a/html/character_info.html
+++ b/html/character_info.html
@@ -6,6 +6,19 @@
     <title>Personaje Info</title>
 </head>
 <body>
-    
+    <header>
+        <img src="../icons/left-arrow.png" alt="boton_back" class="button_back">
+    </header>
+    <main>
+        <section>
+            <div class="sectionDiv_info_character">
+                <img src="../photos/Akira.png" alt="JohnWick 1" class="movie_image">
+            </div>
+            <div class="Info_character">
+
+            </div>
+                
+        </section>
+    </main>
 </body>
 </html>
