fix: :bug: Bug fix
Structure bug fixed

none

--- a/html/character_info.html
+++ b/html/character_info.html
@@ -15,7 +15,7 @@
                 <img src="../photos/Akira.png" alt="JohnWick 1" class="movie_image">
             </div>
             <div class="Info_character">
-
+                <h2>nombre_personaje</h2>
             </div>
                 
         </section>
