--- a/html/movie_info.html
+++ b/html/movie_info.html
@@ -15,7 +15,8 @@
                 <img src="../posters/Poster_JW1.png" alt="JohnWick 1" class="movie_image">
             </div>
             <div class="Info_movie">
-
+                <h2>nombre_pelicula</h2>
+                
             </div>
                 
         </section>
