--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characters Page</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
-<body>
+<body class="fondo_negro">
     <header>
         <span class="header_title">JOHN WICK</span>
         <nav>
@@ -15,9 +16,9 @@
             <span>Personajes</span>
         </nav>
     </header>
-    <section class="hero_section">
+    <section class="search_section">
         <input type="text" class="input_SearchCharacter" placeholder="Buscar personaje">
-        <img src="../icons/Filtro.png" alt="filtro">
+        <img src="../icons/Filtro.png" alt="filtro" class="filtro">
     </section>
     <section id="characters_section">
         <div class="character_card">
