--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="./CSS/HeroStyle.css">
 </head>
-<body>
+<body class="fondo">
     <header>
         <span class="header_title">JOHN WICK</span>
         <nav>
