--- a/html/weapons_page.html
+++ b/html/weapons_page.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armeria</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
 
-<body>
+<body class="fondo_negro">
     <header>
         <span class="header_title">JOHN WICK</span>
         <nav>
@@ -18,7 +19,7 @@
         </nav>
         <section class="search_section">
             <input type="text" class="input_SearchCharacter" placeholder="Buscar personaje">
-            <img src="../icons/Filtro.png" alt="filtro">
+            <img src="../icons/Filtro.png" alt="filtro" class="filtro">
         </section>
     </header>
     <main>
