style: :art: Weapons page style
style designed succesfully

none

--- a/html/weapons_page.html
+++ b/html/weapons_page.html
@@ -22,16 +22,16 @@
             <img src="../icons/Filtro.png" alt="filtro" class="filtro">
         </section>
     </header>
-    <main>
-        <section>
+    <main id="weapons_total">
+        <section class="weapon_card">
             <img src="../weapons/Benelli M2 Super 90 (TTI).png" alt="Benelli M2 Super 90 (TTI)" class="weapon_image">
             <div>
                 <h2>Benelli M2 Super 90 (TTI)</h2>
                 <p>El Benelli M2 Super 90 es una escopeta semiautomática de acción por inercia, conocida por su
                     fiabilidad y rapidez de disparo. Es utilizada por John Wick en varias escenas de combate.</p>
             </div>
-        </section>
-        <section>
+        </section class="weapon_card">
+        <section class="weapon_card">
             <img src="../weapons/Cinturon.png" alt="Cinturon" class="weapon_image">
             <div>
                 <h2>Cinturón</h2>
@@ -39,7 +39,7 @@
                     sirve como un elemento práctico para llevar munición y otros equipos necesarios durante sus misiones.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Colt M1911A1.png" alt="Colt M1911A1" class="weapon_image">
             <div>
                 <h2>Colt M1911A1</h2>
@@ -47,7 +47,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/CZ P-10C.png" alt="CZ P-10C" class="weapon_image">
             <div>
                 <h2>CZ P-10C</h2>
@@ -55,7 +55,7 @@
                     de las armas utilizadas por John Wick en sus enfrentamientos.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Daniel Defense MK18.png" alt="Daniel Defense MK18" class="weapon_image">
             <div>
                 <h2>Daniel Defense MK18</h2>
@@ -63,7 +63,7 @@
                     Es una de las armas más icónicas utilizadas por John Wick en sus combates.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Genesis Arms Gen-12.png" alt="Genesis Arms Gen-12" class="weapon_image">
             <div>
                 <h2>Genesis Arms Gen-12</h2>
@@ -72,7 +72,7 @@
                     combate intenso.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Glock 26.png" alt="Glock 26" class="weapon_image">
             <div>
                 <h2>Glock 26</h2>
@@ -80,7 +80,7 @@
                     una de las armas que John Wick utiliza en sus misiones.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Glock 34.png" alt="Glock 34" class="weapon_image">
             <div>
                 <h2>Glock 34</h2>
@@ -88,7 +88,7 @@
                     disparo rápido. Es utilizada por John Wick en varias escenas de acción.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Katana.png" alt="Katana" class="weapon_image">
             <div>
                 <h2>Katana</h2>
@@ -97,7 +97,7 @@
                     en el manejo de esta arma.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Kimber Warrior (1).png" alt="Kimber" class="weapon_image">
             <div>
                 <h2>Kimber Warrior</h2>
@@ -106,7 +106,7 @@
                     habilidad con armas de fuego.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Knife.png" alt="Knife" class="weapon_image">
             <div>
                 <h2>Cuchillo</h2>
@@ -114,7 +114,7 @@
                     Su habilidad con el cuchillo resalta su destreza y rapidez en situaciones de combate cercano.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/KRISS Vector.png" alt="KRISS Vector" class="weapon_image">
             <div>
                 <h2>KRISS Vector</h2>
@@ -122,7 +122,7 @@
                     rápido. Es una de las armas más distintivas utilizadas por John Wick en sus enfrentamientos.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/KSG.png" alt="KSG" class="weapon_image">
             <div>
                 <h2>KSG</h2>
@@ -130,7 +130,7 @@
                     disparar múltiples cartuchos. Es utilizada por John Wick en situaciones de combate intenso.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/M110.png" alt="M110" class="weapon_image">
             <div>
                 <h2>M110</h2>
@@ -138,7 +138,7 @@
                     Es utilizado por John Wick en situaciones que requieren disparos a larga distancia.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/M4A1.png" alt="M4A1" class="weapon_image">
             <div>
                 <h2>M4A1</h2>
@@ -146,7 +146,7 @@
                     de las armas más icónicas utilizadas por John Wick en sus combates.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/P30 L.png" alt="P30 L" class="weapon_image">
             <div>
                 <h2>P30 L</h2>
@@ -154,7 +154,7 @@
                     utilizada por John Wick en varias escenas de acción, destacando su habilidad con armas de fuego.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Pit Viper by Taran Tactical.png" alt="Pit Viper by Taran Tactical" class="weapon_image">
             <div>
                 <h2>Pit Viper by Taran Tactical</h2>
@@ -162,7 +162,7 @@
                     rendimiento excepcional. Es utilizada por John Wick en situaciones de combate intenso.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/Remington 870.png" alt="Remington 870" class="weapon_image">
             <div>
                 <h2>Remington 870</h2>
@@ -171,7 +171,7 @@
                     escopetas.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/SIG MPX Carbine.png" alt="SIG MPX Carbine" class="weapon_image">
             <div>
                 <h2>SIG MPX Carbine</h2>
@@ -179,7 +179,7 @@
                     disparo rápido. Es una de las armas más versátiles utilizadas por John Wick en sus combates.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card"> 
             <img src="../weapons/SIG MPX.png" alt="SIG MPX" class="weapon_image">
             <div>
                 <h2>SIG MPX</h2>
@@ -188,7 +188,7 @@
                     fuego.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/SIG-Sauer P320.png" alt="SIG-Sauer P320" class="weapon_image">
             <div>
                 <h2>SIG-Sauer P320</h2>
@@ -197,7 +197,7 @@
                     habilidad con armas de fuego.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/SIG-Sauer P365.png" alt="SIG-Sauer P365" class="weapon_image">
             <div>
                 <h2>SIG-Sauer P365</h2>
@@ -206,7 +206,7 @@
                     acción, destacando su habilidad con armas de fuego.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/SR-16.png" alt="SR-16" class="weapon_image">
             <div>
                 <h2>SR-16</h2>
@@ -214,7 +214,7 @@
                     armas utilizadas por John Wick en sus enfrentamientos, destacando su habilidad con rifles de asalto.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/STI 2011 Combat Master (TTI).png" alt="STI 2011 Combat Master (TTI)" class="weapon_image">
             <div>
                 <h2>STI 2011 Combat Master (TTI)</h2>
@@ -223,7 +223,7 @@
                     habilidad con armas de fuego personalizadas.</p>
             </div>
         </section>
-        <section>
+        <section class="weapon_card">
             <img src="../weapons/TTI TR-1 Ultralight.png" alt="TTI TR-1 Ultralight" class="weapon_image">
             <div>
                 <h2>TTI TR-1 Ultralight</h2>
