style: :art: Movies page style
style designed succesfully

none

--- a/html/movies_page.html
+++ b/html/movies_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
 <body>
     <header>
@@ -15,21 +16,21 @@
             <span>Personajes</span>
         </nav>
     </header>
+    <hr>
     <main id="main_movies">
-        <hr>
         <section class="poster_section">
-            <img src="../posters/Poster_JW1.png" alt="Poster_JW1" class="poster_JW1">
+            <img src="../posters/Poster_JW1.png" alt="Poster_JW1" class="poster_JW">
         </section>
         <section class="poster_section">
-            <img src="../posters/Poster_JW2.png" alt="Poster_JW2" class="poster_JW2">
+            <img src="../posters/Poster_JW2.png" alt="Poster_JW2" class="poster_JW">
         </section>
         <section class="poster_section">
-            <img src="../posters/Poster_JW3.png" alt="Poster_JW3" class="poster_JW3">
+            <img src="../posters/Poster_JW3.png" alt="Poster_JW3" class="poster_JW">
         </section>
         <section class="poster_section">
-            <img src="../posters/Poster_JW4.png" alt="Poster_JW4" class="poster_JW4">
+            <img src="../posters/Poster_JW4.png" alt="Poster_JW4" class="poster_JW">
         </section>
-        <hr>
     </main>
+    <hr>
 </body>
 </html>
