style: :art: History page
style designed succesfully

none

--- a/html/history_page.html
+++ b/html/history_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biografia</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
 <body>
     <header>
@@ -16,11 +17,13 @@
         </nav>
     </header>
     <main>
-        <section>
-            <img src="../photos/John Wixk.jpg" alt="John Wick" class="main_image">
+        <section id="information_JW">
+            <img src="../photos/John Wick.jpg" alt="John Wick" class="main_image">
             <div id="Info_JohnWick">
                 <span id="Span_Historyname">John Wick</span>
+                <div id="info">
 
+                </div>
             </div>
         </section>
     </main>
