style: :art: Movies page information style
style designed correctly

none

--- a/html/movie_info.html
+++ b/html/movie_info.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peliculas info</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
 <body>
     <header>
         <img src="../icons/left-arrow.png" alt="boton_back" class="button_back">
     </header>
     <main>
-        <section>
+        <section class="section_info">
             <div class="sectionDiv_info">
                 <img src="../posters/Poster_JW1.png" alt="JohnWick 1" class="movie_image">
             </div>
             <div class="Info_movie">
                 <h2>nombre_pelicula</h2>
-                
             </div>
-                
         </section>
     </main>
 </body>
