style: :art: Weapon image style
style designed succesfully

none

--- a/html/weapon_info.html
+++ b/html/weapon_info.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arma info</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
 <body>
     <header>
         <img src="../icons/left-arrow.png" alt="boton_back" class="button_back">
     </header>
     <main>
+      <section class="general_weapon">
         <section class="section_weaponCard">
-            <h2>Arma</h2>
             <img src="../weapons/Benelli M2 Super 90 (TTI).png" alt="weaponInfo_section_image" class="weaponInfo_section_image">
             <div class="stats">
+              <h2>Arma</h2>
                 <div class="stat">
                   <span>Ergonomía</span>
                   <div class="bar-container">
@@ -43,8 +45,8 @@
                 </div>
             </div>
         </section>
-
-        <section class="titulo_weapon">
+      </section>
+        <section class="section_descriptionWeapon">
             <h3>Descripcion:</h3>
         </section>
 
