style: :art: Character info page style
style designed and created succesfully

none

--- a/html/character_info.html
+++ b/html/character_info.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personaje Info</title>
+    <link rel="stylesheet" href="../CSS/HeroStyle.css">
 </head>
 <body>
     <header>
         <img src="../icons/left-arrow.png" alt="boton_back" class="button_back">
     </header>
     <main>
-        <section>
+        <section class="general_character">
             <div class="sectionDiv_info_character">
-                <img src="../photos/Akira.png" alt="JohnWick 1" class="movie_image">
+                <img src="../photos/Akira.png" alt="character_image" class="movie_image">
             </div>
-            <div class="Info_character">
+            <div class="title_character">
                 <h2>nombre_personaje</h2>
             </div>
-                
         </section>
+    </main>
+    <p class="Description_character">
+
+    </p>
     </main>
 </body>
 </html>
