--- a/html/history_page.html
+++ b/html/history_page.html
@@ -27,5 +27,6 @@
             </div>
         </section>
     </main>
+    <script type="module" src="../JavaScript/john_wick_data.js"></script>
 </body>
 </html>
