feat: :sparkles: History Page Description
Description showed on the history page with its style

none

--- a/html/history_page.html
+++ b/html/history_page.html
@@ -26,6 +26,9 @@
                 </div>
             </div>
         </section>
+        <article id="DescripcionJW">
+
+        </article>
     </main>
     <script type="module" src="../JavaScript/john_wick_data.js"></script>
 </body>
