--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="./prueba.js"></script>
+    <script type="module" src="./JavaScript/lluvia.js"></script>
 </body>
 </html>
