feat: :sparkles: pages linked
the pages have been linked

none

--- a/html/history_page.html
+++ b/html/history_page.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <span class="header_title">JOHN WICK</span>
+        <span class="header_title"><a href="../index.html">JOHN WICK</a></span>
         <nav>
-            <span>Biografía</span>
-            <span>Peliculas</span>
-            <span>Armería</span>
-            <span>Personajes</span>
+            <span class="opcion"><a href="./history_page.html">Biografía</a></span>
+            <span class="opcion"><a href="./movies_page.html">Peliculas</a></span>
+            <span class="opcion"><a href="./weapons_page.html">Armería</a></span>
+            <span class="opcion"><a href="./characters_page.html">Personajes</a></span>
         </nav>
     </header>
     <main>
