--- a/html/weapon_info.html
+++ b/html/weapon_info.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="../icons/left-arrow.png" alt="boton_back" class="button_back">
+        <a href="./weapons_page.html"><img src="../icons/left-arrow.png" alt="boton_back" class="button_back"></a>
     </header>
     <main>
       <section class="general_weapon">
