--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body class="fondo">
     <header>
-        <span class="header_title">JOHN WICK</span>
+        <span class="header_title"><a href="../index.html">JOHN WICK</a></span>
         <nav>
-            <span class="opcion">Biografía</span>
-            <span class="opcion">Peliculas</span>
-            <span class="opcion">Armería</span>
-            <span class="opcion">Personajes</span>
+            <span class="opcion"><a href="./html/history_page.html">Biografía</a></span>
+            <span class="opcion"><a href="./html/movies_page.html">Peliculas</a></span>
+            <span class="opcion"><a href="./html/weapons_page.html">Armería</a></span>
+            <span class="opcion"><a href="./html/characters_page.html">Personajes</a></span>
         </nav>
     </header>
     <main>
