--- a/html/character_info.html
+++ b/html/character_info.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="../icons/left-arrow.png" alt="boton_back" class="button_back">
+        <a href="./characters_page.html"><img src="../icons/left-arrow.png" alt="boton_back" class="button_back"></a>
     </header>
     <main>
         <section class="general_character">
