feat: :sparkles: Links to the character info
links created to each image in characters page

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -22,80 +22,81 @@
     </header>
     <section id="characters_section">
         <div class="character_card">
-            <img src="../photos/Akira.png" alt="Akira">
+            <a href="../html/character_info.html"><img src="../photos/Akira.png" alt="Akira"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Bowery.png" alt="Bowery King">
+            <a href="../html/character_info.html"><img src="../photos/Bowery.png" alt="Bowery King"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Caine.png" alt="Caine">
+            <a href="../html/character_info.html"><img src="../photos/Caine.png" alt="Caine"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Cassian.png" alt="Cassian">
+            <a href="../html/character_info.html"><img src="../photos/Cassian.png" alt="Cassian"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Charon.png" alt="Charon">
+            <a href="../html/character_info.html"><img src="../photos/Charon.png" alt="Charon"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Ilustre.png" alt="Ilustre">
+            <a href="../html/character_info.html"><img src="../photos/Ilustre.png" alt="Ilustre"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/josef_tarasov.png" alt="josef_tarasov">
+            <a href="../html/character_info.html"><img src="../photos/josef_tarasov.png" alt="josef_tarasov"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Koji.png" alt="Koji">
+            <a href="../html/character_info.html"><img src="../photos/Koji.png" alt="Koji"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Magistrada.png" alt="Magistrada">
+            <a href="../html/character_info.html"><img src="../photos/Magistrada.png" alt="Magistrada"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Marcus.png" alt="Marcus">
+            <a href="../html/character_info.html"><img src="../photos/Marcus.png" alt="Marcus"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Marques.png" alt="Marques">
+            <a href="../html/character_info.html"><img src="../photos/Marques.png" alt="Marques"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Nobody.png" alt="Nobody">
+            <a href="../html/character_info.html"><img src="../photos/Nobody.png" alt="Nobody"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Perkins.png" alt="Perkins">
+            <a href="../html/character_info.html"><img src="../photos/Perkins.png" alt="Perkins"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Ruska.png" alt="Ruska">
+            <a href="../html/character_info.html"><img src="../photos/Ruska.png" alt="Ruska"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Santino D Antonio.png" alt="Santino D'Antonio">
+            <a href="../html/character_info.html"><img src="../photos/Santino D Antonio.png" alt="Santino D'Antonio"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Sofia.png" alt="Sofia">
+            <a href="../html/character_info.html"><img src="../photos/Sofia.png" alt="Sofia"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Viggo.png" alt="Viggo Tarasov">
+            <a href="../html/character_info.html"><img src="../photos/Viggo.png" alt="Viggo Tarasov"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Winston.png" alt="Winston">
+            <a href="../html/character_info.html"><img src="../photos/Winston.png" alt="Winston"></a>
         </div>
 
         <div class="character_card">
-            <img src="../photos/Zero.png" alt="Zero"> 
+            <a href="../html/character_info.html"><img src="../photos/Zero.png" alt="Zero"></a> 
         </div>
     </section>
+    <script type="module" src="../JavaScript/characters.js"></script>
 </body>
 </html>
