--- a/html/character_info.html
+++ b/html/character_info.html
@@ -13,16 +13,12 @@
     <main>
         <section class="general_character">
             <div class="sectionDiv_info_character">
-                <img src="../photos/Akira.png" alt="character_image" class="movie_image">
+                <img id="character_image" src="" alt="character_image" class="movie_image">
             </div>
-            <div class="title_character">
-                <h2>nombre_personaje</h2>
-            </div>
+            <div class="Info_character"></div>
         </section>
+        <p class="Description_character"></p>
     </main>
-    <p class="Description_character">
-
-    </p>
-    </main>
+    <script type="module" src="../JavaScript/characters.js"></script>
 </body>
 </html>
