fix: :bug: Bug fix
Bug fixed related with the image

none

--- a/html/movie_info.html
+++ b/html/movie_info.html
@@ -11,12 +11,11 @@
         <a href="./movies_page.html"><img src="../icons/left-arrow.png" alt="boton_back" class="button_back"></a>
     </header>
     <main>
-        <section class="section_info">
-            <div class="sectionDiv_info">
+        <section class="general_character">
+            <div class="sectionDiv_info_character">
                 <img src="../posters/Poster_JW1.png" alt="JohnWick 1" class="movie_image">
             </div>
             <div class="Info_movie">
-                <h2>nombre_pelicula</h2>
             </div>
         </section>
     </main>
