fix: :adhesive_bandage: bug repaired
Code improved

none

--- a/html/movies_page.html
+++ b/html/movies_page.html
@@ -17,20 +17,14 @@
         </nav>
     </header>
     <hr>
-    <main id="main_movies">
+    <template>
         <section class="poster_section">
             <img src="../posters/Poster_JW1.png" alt="Poster_JW1" class="poster_JW">
         </section>
-        <section class="poster_section">
-            <img src="../posters/Poster_JW2.png" alt="Poster_JW2" class="poster_JW">
-        </section>
-        <section class="poster_section">
-            <img src="../posters/Poster_JW3.png" alt="Poster_JW3" class="poster_JW">
-        </section>
-        <section class="poster_section">
-            <img src="../posters/Poster_JW4.png" alt="Poster_JW4" class="poster_JW">
-        </section>
-    </main>
+    </template> 
+    <movie-johnwick></movie-johnwick>
+
     <hr>
+    <script type="module" src="../JavaScript/Movies.js"></script>
 </body>
 </html>
