fix: :ambulance: Critical error
working on error solution

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -20,82 +20,13 @@
             <img src="../icons/Filtro.png" alt="filtro" class="filtro">
         </section>
     </header>
-    <section id="characters_section">
+    <template>
         <div class="character_card">
             <a href="../html/character_info.html?id=jw-014"><img src="../photos/Akira.png" alt="Akira"></a>
         </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-015"><img src="../photos/Bowery.png" alt="Bowery King"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-016"><img src="../photos/Caine.png" alt="Caine"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-017"><img src="../photos/Cassian.png" alt="Cassian"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-018"><img src="../photos/Charon.png" alt="Charon"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-019"><img src="../photos/Ilustre.png" alt="El Anciano"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-020"><img src="../photos/josef_tarasov.png" alt="Josef Tarasov"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-021"><img src="../photos/Koji.png" alt="Shimazu Koji"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-022"><img src="../photos/Magistrada.png" alt="La Adjudicadora"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-023"><img src="../photos/Marcus.png" alt="Marcus"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-024"><img src="../photos/Marques.png" alt="Vincent de Gramont"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-025"><img src="../photos/Nobody.png" alt="Mr. Nobody"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-026"><img src="../photos/Perkins.png" alt="Perkins"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-027"><img src="../photos/Ruska.png" alt="La Directora"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-028"><img src="../photos/Santino D Antonio.png" alt="Santino D'Antonio"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-029"><img src="../photos/Sofia.png" alt="Sofia Al-Azwar"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-030"><img src="../photos/Viggo.png" alt="Viggo Tarasov"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-031"><img src="../photos/Winston.png" alt="Winston Scott"></a>
-        </div>
-
-        <div class="character_card">
-            <a href="../html/character_info.html?id=jw-032"><img src="../photos/Zero.png" alt="Zero"></a>
-        </div>
+    </template>
+    <section id="characters_section">
+        <character_image></character_image>
     </section>
     <script type="module" src="../JavaScript/characters.js"></script>
 </body>
