feat: :zap: Characters improvement
characters section improved

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -26,7 +26,7 @@
         </div>
     </template>
     <section id="characters_section">
-        <character_image></character_image>
+        <character-card-list id="character_card"></character-card-list>
     </section>
     <script type="module" src="../JavaScript/characters.js"></script>
 </body>
