feat: :sparkles: Filter functionality
functionality applied and built succesfully

none

--- a/html/characters_page.html
+++ b/html/characters_page.html
@@ -18,6 +18,13 @@
         <section class="search_section">
             <input type="text" class="input_SearchCharacter" placeholder="Buscar personaje">
             <img src="../icons/Filtro.png" alt="filtro" class="filtro">
+            <select name="filter_container" id="movieFilter">
+                <option value="">Peliculas</option>
+                <option value="John Wick 1">John Wick 1</option>
+                <option value="John Wick 2">John Wick 2</option>
+                <option value="John Wick 3">John Wick 3</option>
+                <option value="John Wick 4">John Wick 4</option>
+            </select>
         </section>
     </header>
     <template>
